--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           alt="Vista de un pueblo costero, bajo un cielo nublado."
           class="content__lead-image"
         />
-        <div class="intro">
+        <section class="intro">
           <h2 class="intro__title">
             Conoce un poco mejor los lugares de los que proceden tus colegas en
             línea
@@ -57,7 +57,7 @@
             ciudad natal. No importa de dónde seas, nos alegra que seas nuestro
             vecino.
           </p>
-        </div>
+        </section>
       </main>
       <footer class="footer">
         <p>&copy; 2025. Marcela Rodriguez</p>
