--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         </h2>
       </header>
       <main class="content">
-        <img
-          src="images/lead.png"
-          alt="Vista de un pueblo costero, bajo un cielo nublado."
-          class="content__lead-image"
-        />
+        <section class="content__lead">
+          <img
+            src="images/lead.png"
+            alt="Vista de un pueblo costero, bajo un cielo nublado."
+            class="content__lead-image"
+          />
+        </section>
         <section class="intro">
           <h2 class="intro__title">
             Conoce un poco mejor los lugares de los que proceden tus colegas en
