Agregar sección photo_grid

--- a/index.html
+++ b/index.html
@@ -60,6 +60,48 @@
             vecino.
           </p>
         </section>
+        <section class="photo_grid">
+          <img
+            src="images/imagen1.png"
+            alt="Vista aérea de un pueblo costero bajo un cielo nublado."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen2.png"
+            alt="Vista de una ciudad construida, con edificios y el mar."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen3.png"
+            alt="Gran edificio blanco con cúpulas distintivas y vegetación."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen4.png"
+            alt="Vista panorámica de una ciudad con edificios altos y un puente sobre un río."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen5.png"
+            alt="Campo abierto con hierba alta y árboles al fondo."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen6.png"
+            alt="Camino bordeado de vegetación con carteles verdes de información."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen7.png"
+            alt="Persona entrando a una cabaña, con techo de paja."
+            class="photo_grid_item"
+          />
+          <img
+            src="images/imagen8.png"
+            alt="Aldea con casas con techos blancos, al fondo vegetación."
+            class="photo_grid_item"
+          />
+        </section>
       </main>
       <footer class="footer">
         <p>&copy; 2025. Marcela Rodriguez</p>
