--- a/index.html
+++ b/index.html
@@ -102,6 +102,140 @@
             class="photo_grid_item"
           />
         </section>
+        <section class="places">
+          <article class="place">
+            <h2 class="place__title">Cricieth, Gales</h2>
+            <div class="place__artist">
+              <p class="place__artist-heading">Artistas</p>
+              <p class="place__artist-names">
+                Steffan Warren, editor jefe<br />Kseniya Glagoleva, gerente de
+                proyectos
+              </p>
+            </div>
+            <img
+              src="images/Cricieth, Gales.png"
+              alt="Vista de una ciudad al lado del mar"
+              class="place_image"
+            />
+            <div class="place_content">
+              <p class="place_text">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada Perla de Gales en las costas de
+                Snowdonia, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p class="place_text">
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
+            <a
+              class="place__button"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+              >Compra esta obra como NFT</a
+            >
+          </article>
+          <article class="place">
+            <h2 class="place__title">Berea, EE. UU.</h2>
+            <div class="place__artist">
+              <p class="place__artist-heading">Artista</p>
+              <p class="place__artist-names">
+                Artista Travis Turner, autor y editor
+              </p>
+            </div>
+            <img
+              src="images/Berea, EEUU.png"
+              alt="Vista de una calle urbana con una curva, casas con árboles."
+              class="place_image"
+            />
+            <div class="place_content">
+              <p class="place_text">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p class="place_text">
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
+            <a
+              class="place__button"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+              >Compra esta obra como NFT</a
+            >
+          </article>
+
+          <article class="place">
+            <h2 class="place__title">Muramvya, Burundi</h2>
+            <div class="place__artist">
+              <p class="place__artist-heading">Artista</p>
+              <p class="place__artist-names">
+                Grevisse Kenguruka, editor técnico Steffan Warren, editor
+              </p>
+            </div>
+            <img
+              src="images/Muramvya, Burundi.png"
+              alt="Monumento blanco y rojo con texto UBUMWE, con una torre de comunicaciones detrás."
+              class="place_image"
+            />
+            <div class="place_content">
+              <p class="place_text">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place_text">
+                Su clima es más bien frío durante la noche, pero durante el día,
+                podrías pensar que estás en el paraíso. A sus 2,665 metros
+                (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
+                lugares más fríos de la provincia. Pero es justo esa brisa
+                fresca la que da pie a una de las más grandes plantaciones de té
+                y café del país, y que representa la mayoría de las
+                exportaciones de Burundi.
+              </p>
+              <p class="place_text">
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
+            <a
+              class="place__button"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+              target="_blank"
+            >
+              Compra esta obra como NFT</a
+            >
+          </article>
+        </section>
       </main>
       <footer class="footer">
         <p>&copy; 2025. Marcela Rodriguez</p>
