--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </p>
             </div>
             <img
-              src="images/Cricieth, Gales.png"
+              src="images/Cricieth_Gales.png"
               alt="Vista de una ciudad al lado del mar"
               class="place_image"
             />
@@ -153,7 +153,7 @@
               </p>
             </div>
             <img
-              src="images/Berea, EEUU.png"
+              src="images/Berea_EEUU.png"
               alt="Vista de una calle urbana con una curva, casas con árboles."
               class="place_image"
             />
@@ -194,7 +194,7 @@
               </p>
             </div>
             <img
-              src="images/Muramvya, Burundi.png"
+              src="images/Muramvya_Burundi.png"
               alt="Monumento blanco y rojo con texto UBUMWE, con una torre de comunicaciones detrás."
               class="place_image"
             />
