--- a/index.html
+++ b/index.html
@@ -60,46 +60,46 @@
             vecino.
           </p>
         </section>
-        <section class="photo_grid">
+        <section class="photo-grid">
           <img
             src="images/imagen1.png"
             alt="Vista aérea de un pueblo costero bajo un cielo nublado."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen2.png"
             alt="Vista de una ciudad construida, con edificios y el mar."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen3.png"
             alt="Gran edificio blanco con cúpulas distintivas y vegetación."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen4.png"
             alt="Vista panorámica de una ciudad con edificios altos y un puente sobre un río."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen5.png"
             alt="Campo abierto con hierba alta y árboles al fondo."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen6.png"
             alt="Camino bordeado de vegetación con carteles verdes de información."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen7.png"
             alt="Persona entrando a una cabaña, con techo de paja."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
           <img
             src="images/imagen8.png"
             alt="Aldea con casas con techos blancos, al fondo vegetación."
-            class="photo_grid_item"
+            class="photo-grid_item"
           />
         </section>
         <section class="places">
@@ -115,10 +115,10 @@
             <img
               src="images/Cricieth_Gales.png"
               alt="Vista de una ciudad al lado del mar"
-              class="place_image"
+              class="place__image"
             />
-            <div class="place_content">
-              <p class="place_text">
+            <div class="place__content">
+              <p class="place__text">
                 Las ruinas medievales del castillo de Cricieth dominan la ciudad
                 desde una roca que extiende sobre el mar. Se cree que fue
                 construido por Llewelyn el Grande en el S. XIII. 800 años
@@ -126,7 +126,7 @@
                 Snowdonia, se ha convertido en un popular destino turístico
                 durante los meses de verano.
               </p>
-              <p class="place_text">
+              <p class="place__text">
                 A pocos pasos de camino al castillo, puedes disfrutar de los
                 mejores helados del mundo en Cadwalader's, cuyo ingrediente
                 secreto se rumorea que son algas marinas de la localidad. Otra
@@ -155,10 +155,10 @@
             <img
               src="images/Berea_EEUU.png"
               alt="Vista de una calle urbana con una curva, casas con árboles."
-              class="place_image"
+              class="place__image"
             />
-            <div class="place_content">
-              <p class="place_text">
+            <div class="place__content">
+              <p class="place__text">
                 Berea es una pequeña ciudad ubicada en la parte central de
                 Kentucky. La ciudad está rodeada por hermosos bosques y campos.
                 Es conocida como la capital de la artesanía del estado, y sus
@@ -169,7 +169,7 @@
                 local hecho de pan de maíz y que se sirve con una cuchara de
                 madera.
               </p>
-              <p class="place_text">
+              <p class="place__text">
                 Aunque, probablemente es mejor conocida por su universidad. El
                 Berea College fue fundado en 1855 y fue la primera universidad
                 sureña integrada racialmente, así como la primera en ser
@@ -196,10 +196,10 @@
             <img
               src="images/Muramvya_Burundi.png"
               alt="Monumento blanco y rojo con texto UBUMWE, con una torre de comunicaciones detrás."
-              class="place_image"
+              class="place__image"
             />
-            <div class="place_content">
-              <p class="place_text">
+            <div class="place__content">
+              <p class="place__text">
                 Muramvya es una de las 18 provincias de Burundi. Durante la
                 época del reino, Muramvya fue su capital; y en 2017, gracias a
                 su paisaje cultural y natural, se añadió a la Lista provisional
@@ -207,7 +207,7 @@
                 centro de Burundi, entre las capitales política y económica del
                 país.
               </p>
-              <p class="place_text">
+              <p class="place__text">
                 Su clima es más bien frío durante la noche, pero durante el día,
                 podrías pensar que estás en el paraíso. A sus 2,665 metros
                 (8,743 ft) sobre el nivel del mar, el Monte Teza es uno de los
@@ -216,7 +216,7 @@
                 y café del país, y que representa la mayoría de las
                 exportaciones de Burundi.
               </p>
-              <p class="place_text">
+              <p class="place__text">
                 El Parque nacional de Kibira, una de las mayores reservas de
                 vida silvestre para los simios, ocupa parte de cuatro
                 provincias, incluyendo Muramvya. Este parque nacional se
