--- a/index.html
+++ b/index.html
@@ -64,42 +64,42 @@
           <img
             src="images/imagen1.png"
             alt="Vista aérea de un pueblo costero bajo un cielo nublado."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen2.png"
             alt="Vista de una ciudad construida, con edificios y el mar."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen3.png"
             alt="Gran edificio blanco con cúpulas distintivas y vegetación."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen4.png"
             alt="Vista panorámica de una ciudad con edificios altos y un puente sobre un río."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen5.png"
             alt="Campo abierto con hierba alta y árboles al fondo."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen6.png"
             alt="Camino bordeado de vegetación con carteles verdes de información."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen7.png"
             alt="Persona entrando a una cabaña, con techo de paja."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
           <img
             src="images/imagen8.png"
             alt="Aldea con casas con techos blancos, al fondo vegetación."
-            class="photo-grid_item"
+            class="photo-grid photo-grid_item"
           />
         </section>
         <section class="places">
@@ -108,7 +108,7 @@
             <div class="place__artist">
               <p class="place__artist-heading">Artistas</p>
               <p class="place__artist-names">
-                Steffan Warren, editor jefe<br />Kseniya Glagoleva, gerente de
+                Steffan Warren, editor jefe Kseniya Glagoleva, gerente de
                 proyectos
               </p>
             </div>
